--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -34,36 +34,34 @@
     {% endblock %}
 
     {% block pagination %}
-
     {% if is_paginated %}
-    <ul class="pagination justify-content-center pagination-sm" >
+    <ul class="pagination justify-content-center pagination-sm">
         {% if page_obj.has_previous %}
         <li class="page-item">
-            <a href="{% url 'list' %}? page={{page_obj.previous_page_number}}" class="page-link"
-            tabindex="-1">Previous</a>
-
+                <a class="page-link" href="{% url 'list' %}?page={{page_obj.previous_page_number}}"
+                tabindex="-1">Previous</a>
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a href="#" class="page-link"  tabindex="-1">Previous</a>
+            <a href="#" class="page-link" tabindex="-1">Previous</a>
         </li>
         {% endif %}
 
         {% for object in page_obj.paginator.page_range %}
-        <li class="page-item {% if page_obj.number == forloop.counter %} disabled{% endif %}">
-        <a class="page-link" href="{{request.path}}?page={{forloop.counter}}">{{forloop.counter}}</a>
+        <li class="page-item {% if page_obj.number == forloop.counter %} disabled {% endif %}">
+            <a class="page-link" href="{{request.path}}?page={{forloop.counter}}">
+                {{forloop.counter}}</a>
         </li>
         {% endfor %}
 
-
         {% if page_obj.has_next %}
         <li class="page-item">
-            <a class="page-link" href="{% url 'list' %}?page={{page_obj.page_next_number}}">Next</a>
-
+            <a class="page-link" href="{% url 'list' %}?page={{page_obj.next_page_number}}">
+                Next</a>
         </li>
         {% else %}
         <li class="page-item disabled">
-            <a href="#" class="page-link"> Next</a>
+            <a class="page-link" href="#">Next</a>
         </li>
         {% endif %}
     </ul>
